<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoftKeyboard</string>
    <string name="setup_title">Setup</string>
    <string name="setup_subtitle">(SoftKeyboard Experiment)</string>
    <string name="hint_presented"></string>
    <string name="hint_transcribed"></string>
    <string name="hintText">(text goes here)</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="participantcode">Participant code</string>
    <string name="sessioncode">Session code</string>
    <string name="blockcode">Block code</string>
    <string name="groupcode">Group code</string>
    <string name="conditioncode">Condition code</string>
    <string name="numberofphrases">Number of phrases</string>
	<string name="phrasesfile">Phrases file</string>
   	<string name="lowercaseonly">Lowercase only"</string>
    <string name="showrecognizedtextduringentry">Show recognized text during entry</string>

    <string name="setupPartcipantCode">Participant code</string>
    <string name="setupSessionCode">Session code</string>
    <string name="setupBlockCode">Block code</string>
    <string name="setupGroupCode">Group code</string>
    <string name="setupConditionCode">Condition code</string>
    <string name="setupKeyboardLayout">Keyboard layout</string>
    <string name="setupKeyboardScale">Keyboard scale</string>
    <string name="setupOffsetFromBottom">Offset from bottom</string>
    <string name="setupNumberOfPhrases">Number of phrases</string>
    <string name="setupPhrasesFile">Phrases file</string>
    <string name="setupShowPopupKey">Show popup key</string>
    <string name="setupLowercaseOnly">Lowercase only</string>
    <string name="setupShowPresentedTextDuringEntry">Show presented text during entry</string>

</resources>